--- a/index.css
+++ b/index.css
@@ -1,30 +1,111 @@
 th{
     height: 60px;
     width: 200px;
+    min-width: fit-content;
     border: solid 1px black;
     border-collapse: collapse;
-    
 }
 
 table{
     border: solid 1px black;
     border-collapse: collapse;
     border-spacing: 0;
+    margin-left: 25%;
 }
 
 .tds{
     height: 60px;
-    width: 200px;
     border: solid 1px black;
     border-collapse: collapse;
     padding: 0;
+    width: 200px;
+    min-width:fit-content;
+
 }
 
 input{
     height: 60px;
-    width: 200px;
+    width: 100%;
     border-radius: 0cm;
     border: none;
     font-size: 16px;
+    padding: 0;
+    min-width: fit-content;
 }
 
+.navigation{
+    width: 20%;
+    position: absolute;
+    background-color: rgb(211, 190, 190);
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+html{
+    position: relative;
+}
+body{
+    min-height: 1000px;
+    border-collapse: collapse;
+}
+
+
+.btn-container.nav{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10%;
+    margin-top: 200px;
+    
+}
+
+.button-nav{
+    margin-top: 20px;
+    max-width: 150px;
+    height: 50px;
+    background-color: rgb(0, 140, 255);
+    border: none;
+    border-radius: 5px;
+    transition: 0.15s;
+}
+
+.button-nav:hover{
+    background-color: rgb(12, 114, 139);
+}
+
+.button-nav.addRow{
+    margin-top: 20px;
+    max-width: 150px;
+    height: 50px;
+    background-color: rgb(5, 30, 51);
+    border: none;
+    border-radius: 5px;
+    transition: 0.15s;
+    color: white;
+    margin-bottom: 50px;
+}
+
+.button-nav.addRow:hover{
+    background-color: rgb(12, 114, 139);
+}
+.button-nav:active{
+    max-width: 200px;
+    height: 75px;
+}
+.outcome-container {
+    display: flex;
+    max-width: 1361px;
+    margin-left: 25%;
+    margin-top: 50px;
+    box-sizing: border-box;
+    border-collapse: collapse;
+    border: 1px solid black;
+  }
+  
+  .outcome {
+    width: 14.29%;
+    background-color: aquamarine;
+    height: 75px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
