--- a/index.css
+++ b/index.css
@@ -68,7 +68,11 @@ body{
     border-radius: 5px;
     transition: 0.15s;
 }
-
+.button-nav.delete{
+    background-color:rgb(5, 30, 51);
+    color: white;
+    margin-bottom: 50px;
+}
 .button-nav:hover{
     background-color: rgb(12, 114, 139);
 }
@@ -82,7 +86,6 @@ body{
     border-radius: 5px;
     transition: 0.15s;
     color: white;
-    margin-bottom: 50px;
 }
 
 .button-nav.addRow:hover{
