--- a/index.css
+++ b/index.css
@@ -68,10 +68,14 @@ body{
     border-radius: 5px;
     transition: 0.15s;
 }
-.button-nav.delete{
+.button-nav.save{
     background-color:rgb(5, 30, 51);
     color: white;
     margin-bottom: 50px;
+}
+.button-nav.delete{
+    background-color: rgb(5, 30, 51);
+    color: white;
 }
 .button-nav:hover{
     background-color: rgb(12, 114, 139);
